<resources>
    <string name="app_name">MC_assignment1</string>
    <string name="name">Name</string>
    <string name="enter_your_name">enter your name</string>
    <string name="role">role</string>
    <string name="enter_your_role">enter your role</string>
    <string name="next">next</string>
    <string name="Role">Role</string>
    <string name="music">Music</string>
    <string name="rating">Rating</string>
    <string name="Rating">Rating</string>
    <string name="play">Play</string>
    <string name="dance">Dance</string>
    <string name="odyssey">Odyssey</string>
    <string name="feedback_form">feedback form</string>
    <string name="submit">Submit</string>
    <string name="clear">clear</string>
    <string name="rating3">Rating</string>
    <string name="fashion">Fashion</string>
    <string name="rating4">Rating</string>
    <string name="food">Food</string>
    <string name="rating5">Rating</string>
    <string name="rating8">Rating</string>
    <string name="fashion1">Fashion</string>
</resources>