<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/odyssey">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity2">

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#FC732D"
            android:buttonTint="#FD711F"
            android:gravity="center"
            android:text="@string/music"
            android:textColorHighlight="#FD711F"
            android:textColorLink="#FD711F"
            app:useMaterialThemeColors="true"
            tools:ignore="MissingConstraints" />

        <RatingBar
            android:id="@+id/ratingBar1"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/rating"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="#FFCC01" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="#FD711F"
            android:gravity="center"
            android:text="@string/dance"
            tools:ignore="MissingConstraints" />

        <RatingBar
            android:id="@+id/ratingBar2"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/Rating"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="#FFCC01" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:buttonTint="#FD711F"
            android:checked="false"
            android:gravity="center"
            android:text="@string/play"
            app:checkedState="unchecked"
            tools:ignore="MissingConstraints" />

        <RatingBar
            android:id="@+id/ratingBar3"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/rating3"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="#FFCC01" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="#FD711F"
            android:gravity="center"
            android:text="@string/fashion"
            tools:ignore="MissingConstraints" />

        <RatingBar
            android:id="@+id/ratingBar4"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/rating4"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="#FFCC01" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="#FD711F"
            android:gravity="center"
            android:text="@string/food"
            tools:ignore="MissingConstraints" />

        <RatingBar
            android:id="@+id/ratingBar5"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/rating5"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="#FFCC01" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:backgroundTint="#FF925B"
                android:shadowColor="#FC732D"
                android:text="@string/submit"
                android:textColor="#424242"
                android:textSize="13sp"
                android:visibility="visible"
                app:rippleColor="#FC732D"
                app:strokeColor="#FC732D"
                tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginStart="15dp"
                android:backgroundTint="#FF925B"
                android:shadowColor="#FC732D"
                android:text="@string/clear"
                android:textColor="#424242"
                android:textSize="13sp"
                android:visibility="visible"
                app:rippleColor="#FC732D"
                app:strokeColor="#FC732D"
                tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>