<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/odyssey">

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:ignore="MissingPrefix">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="125dp"
                android:fontFamily="@font/amaranth"
                android:text="@string/odyssey"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#674340"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/amaranth"
                android:text="@string/feedback_form"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#674340"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:fontFamily="monospace"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="#211615"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName1"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Role"
                android:textColor="#211615"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="199dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:autofillHints=""
                android:hint="@string/enter_your_role"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/button"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:backgroundTint="#FF925B"
                android:enabled="false"
                android:shadowColor="#FC732D"
                android:text="@string/next"
                android:textColor="#424242"
                android:visibility="visible"
                app:rippleColor="#FC732D"
                app:strokeColor="#FC732D"
                tools:visibility="visible" />

</LinearLayout>

</ScrollView>
