<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/odyssey">

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity3"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:backgroundTint="#FC732D"
        android:gravity="center"
        android:text="@string/music"
        android:textColorHighlight="#FD711F"
        android:textColorLink="#FD711F"
        app:useMaterialThemeColors="true"
        tools:ignore="MissingConstraints"
        android:buttonTint="#FD711F"/>

    <RatingBar
        android:id="@+id/ratingBar6"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/rating"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="#FFCC01" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dance"
        tools:ignore="MissingConstraints"
        android:buttonTint="#FD711F"/>

    <RatingBar
        android:id="@+id/ratingBar7"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/Rating"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="#FFCC01" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:buttonTint="#FD711F"
        android:checked="false"
        android:gravity="center"
        android:text="@string/play"
        app:checkedState="unchecked"
        tools:ignore="MissingConstraints" />

    <RatingBar
        android:id="@+id/ratingBar8"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/rating8"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="#FFCC01" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/fashion1"
        tools:ignore="MissingConstraints"
        android:buttonTint="#FD711F"/>

    <RatingBar
        android:id="@+id/ratingBar9"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="Rating"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="#FFCC01"
        tools:ignore="HardcodedText" />

    <CheckBox
        android:id="@+id/checkBox10"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Food"
        tools:ignore="HardcodedText,MissingConstraints"
        android:buttonTint="#FD711F"/>

    <RatingBar
        android:id="@+id/ratingBar10"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="Rating"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="#FFCC01"
        tools:ignore="HardcodedText" />


</LinearLayout>
</ScrollView>